@@ -4,6 +4,7 @@ Upcoming version
 [TASK]    Remove support for TYPO3 9
 [TASK]    Make extension installable with TYPO3 11
 [TASK]    Switch from xml to xlf language files
+[TASK]    Replace deprecated GeneralUtility::milliseconds() with native PHP function
 
 Version 4.0.1, October 2021
 [TASK]    Use new ke_search_premium 4 namespace "tpwd"
